# TrainSimulator

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TrainSimulatorAPI.cpp  TrainSimulatorAPI.h  main.cpp
DynamicModel/: KinematicState.h  MotionConstraints.h  MotionPlanner.cpp  MotionPlanner.h  TestVehicle.h  TrainController.cpp  TrainController.h
Resources/: trajectory_BLH.txt  trajectory_BLH_dist.txt
Simulator/: ProducerConsumer.h  SimulatorConfiguration.h  TrainSimulator.cpp  TrainSimulator.h
TrainCommunicator/: MillisecondTimer.cpp  MillisecondTimer.h  Protocol.h  UdpCommunicator.cpp  UdpCommunicator.h
TrajKit/: Constants.h  DataTypes.h  GeoUtils.cpp  GeoUtils.h  REAMME.md  Route.cpp  Route.h
